# Product-Hunt

./: README.md
backend/: RoughCopy.ipynb  main.py  pyproject.toml  yt_transcript.py
backend/.ipynb_checkpoints/: yt_transcript-checkpoint.py
