[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx<0.28",
    "pytube>=15.0.0",
    "uvicorn>=0.35.0",
    "youtube-search-python>=1.6.6",
    "youtube-transcript-api>=1.1.1",
    "yt-dlp>=2025.7.21",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
